tests/negative/req01/wrong_arg_count.mvl
// corpus:expect-fail
// expect-requirement: 1
// Scenario: call a function with the wrong number of arguments.
// Triggers: CheckError::WrongArgCount (req1)

total fn add(a: Int, b: Int) -> Int {
    a + b
}

total fn triple_sum(x: Int, y: Int, z: Int) -> Int {
    add(x, y, z)
}

fn main() -> Unit ! Console {
    println("{}", triple_sum(1, 2, 3));
}
